chore: Thesis progress

--- a/Thesis/bibliography.bib
+++ b/Thesis/bibliography.bib
@@ -168,10 +168,10 @@
   month   = {Sep}
 } 
 
-#docs Mastodon Webfinger
+#docs Mastodon 
  @misc{rochko_2020,
   title     = {Webfinger},
-  url       = {https://docs.joinmastodon.org/spec/webfinger/},
+  url       = {https://docs.joinmastodon.org/},
   journal   = {Mastodon},
   publisher = {Mastodon},
   author    = {Rochko, Eugen},
@@ -244,4 +244,39 @@
   author    = {Will Abramson and Adam James Hall and Pavlos Papadopoulos and Nikolaos Pitropakis and William J. Buchanan},
   title     = {A Distributed Trust Framework for Privacy-Preserving Machine Learning},
   booktitle = {Trust, Privacy and Security in Digital Business}
+}
+
+# Forbes Anonym messages Article
+ @misc{martin_2022,
+  title     = {Hugely popular NGL app offers teenagers anonymity in comments about each other},
+  url       = {https://www.forbes.com/sites/iainmartin/2022/06/29/hugely-popular-ngl-app-offers-teenagers-anonymity-in-comments-about-each-other/?sh=38a95a5153d1},
+  journal   = {Forbes},
+  publisher = {Forbes Magazine},
+  author    = {Martin, Iain},
+  year      = {2022},
+  month     = {Jul}
+} 
+
+# ECDH Article
+ @misc{shaaban_2021,
+  title     = {ECDH-1PU protocol being implemented in several platforms},
+  url       = {https://blog.identity.foundation/ecdh-1pu-implementation/},
+  journal   = {Blog},
+  publisher = {Decentralized Identity Foundation - Blog},
+  author    = {Shaaban, Baha},
+  editor    = {Kelly, ChrisEditor},
+  year      = {2021},
+  month     = {Oct}
+} 
+
+#ECDH Paper
+@inproceedings{5972416,
+  author    = {Sankar, R. and Subashri, T. and Vaidehi, V.},
+  booktitle = {2011 International Conference on Recent Trends in Information Technology (ICRTIT)},
+  title     = {Implementation and integration of efficient ECDH key exchanging mechanism in software based VoIP network},
+  year      = {2011},
+  volume    = {},
+  number    = {},
+  pages     = {124-128},
+  doi       = {10.1109/ICRTIT.2011.5972416}
 }
